Update Tittle, Tagline, and Homepage

--- a/index.html
+++ b/index.html
@@ -2,15 +2,10 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Blog & Portofolio Erna</title>
+  <title>Erna Mariska | Personal Website</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-<header>
-  <h1>Blog & Portofolio</h1>
-  <p>Catatan tugas dan project kuliah</p>
-</header>
 
 <nav>
   <a href="index.html">Home</a>
@@ -19,14 +14,24 @@
   <a href="tugas.html">Tugas</a>
 </nav>
 
-<main>
-  <h2>Postingan Terbaru</h2>
-  <ul>
-    <li><a href="posts/tugas1.html">Tugas Basis Data</a></li>
-    <li><a href="posts/tugas2.html">Keamanan Sistem</a></li>
-    <li><a href="posts/project1.html">Project Website</a></li>
-  </ul>
-</main>
+<header class="hero">
+  <h1>Erna | Personal Website</h1>
+  <p class="tagline">Learning, Creating, and Growing</p>
+</header>
+
+<section class="intro">
+  <p>
+      Hi, I’m Erna. I’m a working student who is continuously learning and
+  growing in technology, academics, and web development. This website
+  serves as a space to document my learning journey, academic tasks,
+  and projects as part of my professional growth.
+  </p>
+</section>
+
+<section class="quick-links">
+  <a href="portfolio.html" class="btn">Lihat Portofolio</a>
+  <a href="tugas.html" class="btn secondary">Lihat Tugas</a>
+</section>
 
 <footer>
   <p>© 2026 Erna</p>
