update about page and skill section

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Profil</title>
+  <title>About Me | Erna</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -14,15 +14,47 @@
   <a href="tugas.html">Tugas</a>
 </nav>
 
-<h1>Tentang Saya</h1>
-<p>Halo, saya Erna. Mahasiswa yang tertarik pada pengembangan web dan teknologi informasi.</p>
+<section class="about">
+  <h1>About Me</h1>
 
-<h3>Keahlian</h3>
-<ul>
-  <li>HTML & CSS</li>
-  <li>Dasar JavaScript</li>
-  <li>GitHub</li>
-</ul>
+  <p>
+    Hi, I’m Erna — a working student with a strong interest in technology,
+    web development, and continuous learning.
+  </p>
+
+  <p>
+    I created this website as a personal space to document my academic journey,
+    showcase projects, and build a growing portfolio for future professional
+    opportunities.
+  </p>
+
+  <p>
+    Balancing work and study has shaped me to be disciplined, adaptable,
+    and consistent in learning new skills, especially in the field of
+    web development and information technology.
+  </p>
+
+  <p>
+    This website will continue to evolve as I learn, build, and grow.
+  </p>
+</section>
+
+<h3>Technical Skills</h3>
+
+<div class="skill-list">
+   <span>HTML & CSS</span>
+  <span>JavaScript (Basic)</span>
+  <span>Java (OOP)</span>
+  <span>Spring Boot</span>
+  <span>REST API Integration</span>
+  <span>MySQL (Laragon, XAMPP, MySQLServer)</span>
+  <span>Git & GitHub</span>
+</div>
+
+<p class="note">
+  Experienced in developing academic and personal projects using Java and Spring Boot.
+</p>
+
 
 </body>
 </html>
