--- a/index.html
+++ b/index.html
@@ -33,8 +33,33 @@
   <a href="tugas.html" class="btn secondary">Lihat Tugas</a>
 </section>
 
+<section class="recent-posts">
+  <h2>Recent Posts</h2>
+
+  <ul>
+    <li>
+      <a href="posts/mark-zuckerberg.html">
+        Dari Asrama Kampus ke Dunia: Kisah Sukses Mark Zuckerberg
+      </a>
+      <span>February 2026</span>
+    </li>
+
+    <li>
+      <a href="posts/tugas1.html">Tugas Basis Data</a>
+      <span>January 2026</span>
+    </li>
+
+    <li>
+      <a href="posts/project-website.html">Project Website</a>
+      <span>January 2026</span>
+    </li>
+  </ul>
+
+  <a class="view-all" href="tugas.html">View all posts →</a>
+</section>
+
 <footer>
-  <p>© 2026 Erna</p>
+  <p>© 2026 Erna. Built with passion and consistency.</p>
 </footer>
 
 </body>
