--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </nav>
 
 <header class="hero">
-  <h1>Erna | Personal Website</h1>
+  <h1>Erna Mariska | Personal Website</h1>
   <p class="tagline">Learning, Creating, and Growing</p>
 </header>
 
