replace github project link

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Portofolio</title>
+  <title>Portfolio | Erna</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 <nav>
   <a href="index.html">Home</a>
-  <a href="about.html">Profil</a>
-  <a href="portfolio.html">Portofolio</a>
-  <a href="tugas.html">Tugas</a>
+  <a href="about.html">Profile</a>
+  <a href="portfolio.html">Portfolio</a>
+  <a href="tugas.html">Tasks</a>
 </nav>
 
-<h1>Portofolio</h1>
+<section class="portfolio">
+  <h1>Portfolio</h1>
+  <p class="subtitle">
+    A collection of academic and personal projects that reflect my learning journey.
+  </p>
 
-<ul>
-  <li>
-    <strong>Website Portofolio</strong><br>
-    Website pribadi menggunakan HTML & CSS
-  </li>
-  <li>
-    <strong>Project Blog</strong><br>
-    Blog statis menggunakan GitHub Pages
-  </li>
-</ul>
+  <div class="project">
+    <h3>Personal Website</h3>
+    <p>
+      A personal website built using HTML and CSS to showcase my profile,
+      academic tasks, and portfolio.
+    </p>
+    <p class="tech">Tech: HTML, CSS, GitHub Pages</p>
+    <a href="https://ernamrsx.github.io" target="_blank">View Website</a>
+  </div>
+
+  <div class="project">
+    <h3>Spring Boot REST API</h3>
+    <p>
+      A backend project developed using Spring Boot that provides RESTful APIs
+      and integrates with a MySQL database.
+    </p>
+    <p class="tech">Tech: Java, Spring Boot, REST API, MySQL</p>
+   <a  href="https://github.com/ernamrsx/form-pendaftaran-backend" 
+  target="_blank" class="project-link"> View on GitHub</a>
+
+  </div>
+
+  <div class="project">
+    <h3>Academic Projects</h3>
+    <p>
+      A collection of coursework and assignments related to databases,
+      system security, and entrepreneurship.
+    </p>
+    <p class="tech">Tech: Documentation, Web-based presentation</p>
+  </div>
+
+</section>
+
+<footer>
+  <p>© 2026 Erna — Learning, building, and growing.</p>
+</footer>
 
 </body>
 </html>
