--- a/about.html
+++ b/about.html
@@ -44,6 +44,10 @@
 <div class="skill-list">
    <span>HTML & CSS</span>
   <span>JavaScript (Basic)</span>
+  <span>C++ (Basic)</span>
+  <span>C# (Basic)</span>
+  <span>Python (Basic)</span>
+  <span>Unit Testing (Postman, ResClient)</span>
   <span>Java (OOP)</span>
   <span>Spring Boot</span>
   <span>REST API Integration</span>
